Added response classes for all the entities